<resources>
    <string name="app_name">miniLotus_task2</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PAGE1">Go to page1</string>
    <string name="PAGE2">Go to page2</string>
    <string name="PAGE3">Go to page3</string>
    <string name="text3">EXAMPLE</string>
    <string name="PAGE4">GO TO PAGE4</string>
    <string name="PAGE5">GO TO EPOXY</string>
    <string name="PAGE6">SAVE NAME PAGE</string>
    <string name="PAGE7">Food Delivery Home Page</string>
    <string name="free_delivery">free delivery</string>
</resources>